--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <nav>
-    <a href="/" aria-current="page">Registration</a>
+    <a href="./index.html">Registration</a>
     <a href="./page2.html">Log-in</a>
     </nav>
     <link rel="stylesheet" href="styles.css" />
