--- a/page2.html
+++ b/page2.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <nav>
-      <a href="/">Registration</a>
-      <a href="./page3.html" aria-current="page">Log-In</a>
+      <a href="./index.html">Registration</a>
+      <a href="./page3.html">Log-In</a>
     </nav>
     <main>
       <h1>Log-In</h1>
