--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <a href="/" aria-current="page">Quit</a>
+      <a href="./index.html">Quit</a>
     </nav>
     <main>
       <h1>Welcome</h1>
