--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <tr>
             <td>
             <button>
-              <a href="/page2.html">Submit</a>
+              <a href="./page2.html">Submit</a>
             </button>  
               <input type="reset" value="Reset" />
             </td>
