--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
           <tr>
             <td>
               <button>
-                <a href="/page3.html" aria-current="page">Log-In</a>
+                <a href="./page3.html" aria-current="page">Log-In</a>
               </button>
             </td>
           </tr>
